--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav class="navbar navbar-dark bg-dark text-bg-dark px-4 d-flex position-fixed w-100">
         <p class="fs-3 m-0 py-2 py-md-0">Tu Empresa</p>
         <ul class="d-flex list1 text-center m-0 fs-5">
-            <li class="px-2 link d-none d-md-inline"><a href="#servicios">Servicios</a></li>
-            <li class="px-2 link d-none d-md-inline"><a href="#ubicacion">Ubicacion</a></li>
-            <li class="px-2 link d-none d-md-inline"><a href="#redes">Redes</a></li>
+            <li class="px-2 link d-none d-md-inline"><a class="a" href="#servicios">Servicios</a></li>
+            <li class="px-2 link d-none d-md-inline"><a class="a" href="#ubicacion">Ubicacion</a></li>
+            <li class="px-2 link d-none d-md-inline"><a class="a" href="#redes">Redes</a></li>
         </ul>
       </nav>
     <div class="background py-5">
@@ -87,22 +87,22 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-2"></div>
-                    <div class="col-md-2 col-6 my-3 my-md-0">
+                    <a href="" target="_blank" class="aredes col-md-2 col-6 my-3 my-md-0 px-0">
                         <i class="fa-brands fa-square-facebook fs-1"></i>
                         <p>Facebook</p>
-                    </div>
-                    <div class="col-md-2 col-6 my-3 my-md-0">
+                    </a>
+                    <a href="" target="_blank" class="aredes col-md-2 col-6 my-3 my-md-0 px-0">
                         <i class="fa-brands fa-instagram fs-1"></i>
                         <p>Instagram</p>
-                    </div>
-                    <div class="col-md-2 col-6 my-3 my-md-0">
+                    </a>
+                    <a href="" target="_blank" class="aredes col-md-2 col-6 my-3 my-md-0 px-0">
                         <i class="fa-solid fa-globe fs-1"></i>
                         <p>Web</p>
-                    </div>
-                    <div class="col-md-2 col-6 my-3 my-md-0">
+                    </a>
+                    <a href="" target="_blank" class="aredes col-md-2 col-6 my-3 my-md-0 px-0">
                         <i class="fa-brands fa-whatsapp fs-1"></i>
                         <p>WhatsApp</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="pb-3">
                     <div class="row my-5 py-4 pt-5 backgroundform">
@@ -122,7 +122,7 @@
         </div>
     </div>
     <nav class="bg-dark text-bg-dark px-4 justify-content-center d-flex ">
-        <p class="fs-4 m-0">Powered by TheJunger</p>
+        <a class="fs-5 m-0 footer">Powered by TheJunger</a>
       </nav>
 </body>
 </html>
